kay-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_intro_animation_during_settings_toggle.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 2838
expression: "frames.join(\"\\n---FRAME---\\n\")"
---
 +----------------------------------------------------------------------------+
 |                                     Kay                                    |
 +----------------------------------------------------------------------------+

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands



  Auto Drive > Mapping strategy...  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key

---FRAME---
 +----------------------------------------------------------------------------+
 |                                     Kay                                    |
 +----------------------------------------------------------------------------+

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands



  Auto Drive > Mapping strategy...  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key

---FRAME---
 +----------------------------------------------------------------------------+
 |                                     Kay                                    |
 +----------------------------------------------------------------------------+

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands



  Auto Drive > Coordinator is thinking...  ✶ Thinking (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key
