kay-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__context_cell_after_delta.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 586
expression: output
---
 +----------------------------------------------------------------------------+
 |                                     Kay                                    |
 +----------------------------------------------------------------------------+
 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 ✶ 📁 /workspace  2 changes
    main

 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
 Read Only  (Shift+Tab change)                       Ctrl+G editor  •  API key
