kay-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__provider_management_states_cover_list_update_add_and_delete.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 2815
expression: "frames.join(\"\\n---FRAME---\\n\")"
---
 +------------------------------------------------------------------------------------------------+
 |                                               Kay                                              |
 +------------------------------------------------------------------------------------------------+
 ★   /code - perform a coding task (multiple agents)


 • Hello! How can I help you today?



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands



 +--------------------------------------- Manage Providers ---------------------------------------+
 | Supported Providers                                                                            |
 |                                                                                                |
 | › Xiaomi (missing)  Set XIAOMI_API_KEY or run `kay login --provider xiaomi --with-api-key`.    |
 | OpenCode Go (configured)  Set OPENCODE_GO_API_KEY or run `kay login --provider opencode-go     |
 | --with-api-key`.                                                                               |
 | MiniMax (missing)  Set MINIMAX_API_KEY or run `kay login --provider minimax --with-api-key`.   |
 | OpenAI (configured)                                                                            |
 +------------------------------------------------------------------------------------------------+

---FRAME---
 +------------------------------------------------------------------------------------------------+
 |                                               Kay                                              |
 +------------------------------------------------------------------------------------------------+



 ★   /code - perform a coding task (multiple agents)


 • Hello! How can I help you today?



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 +---------------------------------------- Add Xiaomi Key ----------------------------------------+
 | Editing Xiaomi provider key                                                                    |
 |                                                                                                |
 | Set XIAOMI_API_KEY or run `kay login --provider xiaomi --with-api-key`.                        |
 |                                                                                                |
 | Paste the API key below and press Enter to save.                                               |
 +------------------------------------------------------------------------------------------------+

---FRAME---
 +------------------------------------------------------------------------------------------------+
 |                                               Kay                                              |
 +------------------------------------------------------------------------------------------------+
 ★   /code - perform a coding task (multiple agents)


 • Hello! How can I help you today?



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands



 +------------------------------------ Update OpenCode Go Key ------------------------------------+
 | Cancelled Xiaomi                                                                               |
 |                                                                                                |
 | Editing OpenCode Go provider key                                                               |
 |                                                                                                |
 | Set OPENCODE_GO_API_KEY or run `kay login --provider opencode-go --with-api-key`.              |
 |                                                                                                |
 | Paste the API key below and press Enter to save.                                               |
 +------------------------------------------------------------------------------------------------+

---FRAME---
 +------------------------------------------------------------------------------------------------+
 |                                               Kay                                              |
 +------------------------------------------------------------------------------------------------+



 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands


 +-------------------------------------- Remove OpenAI Key ---------------------------------------+
 | Cancelled OpenCode Go                                                                          |
 |                                                                                                |
 |                                                                                                |
 | Remove OpenAI provider credential?                                                             |
 | Press Enter to delete or Esc to cancel.                                                        |
 |                                                                                                |
 |                                                                                                |
 |                                                                                                |
 |                                                                                                |
 |                                                                                                |
 |                                                                                                |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+
